feat(12-add-swagger): swagger added for payments and products
